--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
                         <th>Id</th>
                         <th>Login</th>
                         <th>Password</th>
+                        <th>Role</th>
                         <th>Edit</th>
                         <th>Delete</th>
                     </tr>
@@ -31,6 +32,7 @@
                         <td th:text="${user.id}"></td>
                         <td th:text="${user.login}"></td>
                         <td th:text="${user.password}"></td>
+                        <td th:text="${user.role}"></td>
                         <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
                         <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
                     </tr>
