--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -26,6 +26,11 @@
                         <input type="text" th:field="*{password}" class="form-control" id="password" placeholder="Password">
                         <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
                     </div>
+                    <div class="form-group col-md-6">
+                        <label for="role" class="col-form-label">Role</label>
+                        <input type="text" th:field="*{role}" class="form-control" id="role" placeholder="Role">
+                        <span th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="text-danger"></span>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mt-5">
