--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -22,14 +22,15 @@
                         <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="login" class="col-form-label">Password</label>
+                        <label for="password" class="col-form-label">Password</label>
                         <input type="text" th:field="*{password}" class="form-control" id="password" placeholder="Password">
                         <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="login" class="col-form-label">Role</label>
-                        <input type="text" th:field="*{role}" class="form-control" id="role" placeholder="Role">
-                        <span th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="text-danger"></span>
+                        <select th:name="role_id">
+                            <option value="1">USER</option>
+                            <option value="2">ADMIN</option>
+                        </select>
                     </div>
                 </div>
                 <div class="row">
